<resources>
    <string name="app_name">Restaurant Management</string>
    <string name="title_activity_final_navigator">FinalNavigator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="chicken_burger">Chicken Burger</string>

    <string name="restaurant_info">Restaurant Info</string>
    <string name="menus">Menus</string>
    <string name="reservation">Reservation</string>
    <string name="order_online">Order Online</string>
    <string name="ratings_and_reviews">Ratings And Reviews</string>
    <string name="feedback">Feedback</string>
    <string name="restaurant_infomation">Restaurant Information</string>
    <string name="restaurant_menu">Restaurant Menu</string>
    <string name="reserve_table_to_eat_later">Reserve Table To Eat Later</string>
    <string name="order_food_online">Order Food Online</string>
    <string name="view_reviews_of_our_restaurant">View Reviews Of Our Restaurant</string>
    <string name="provide_feedback">Provide Feedback</string>
    <string name="title_activity_navigate_main">Navigate_Main</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="back_to_home">Back to\nHome</string>
    <string name="username_title">Username</string>

    <string name="phone_title">Phone</string>
    <string name="phone">+000 00 000 000</string>
    <string name="address_title">Address</string>
    <string name="address">City, Street</string>
    <string name="email_title">Email</string>

    <string-array name="numbers">
        <item>Two</item>
        <item>Four</item>
        <item>Six</item>
        <item>Eight</item>
        <item>Ten</item>
    </string-array>

</resources>